# tower

./: README.md
browser/: package.json  tailwind.config.js
browser/src/: app.css
browser/src/lib/: decoders.ts
browser/src/lib/components/: DockerApp.svelte  Modal.svelte  StaticApp.svelte
browser/src/routes/: +page.svelte
browser/src/routes/docker/: +page.svelte
browser/src/routes/static/: +page.svelte
server/: .env  Caddyfile.default  Cargo.toml  README.md  caddyconf.json  caddyfile.json  db.sqlite3
server/db/: schema.sql
server/db/migrations/: 20230604081138_init.sql
server/src/: apps.rs  caddy.rs  db.rs  docker.rs  fsdb.rs  main.rs  mount.rs
server/src/models/: apps.rs
