[package]
name = "tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.69"
poem = { version = "1.3.55", features = [
  "embed",
  "anyhow",
  "static-files",
  "cookie",
  "session",
  "websocket"
] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.89"
url = "2.2.2"
futures-util = "0.3.26"
reqwest = {version = "0.11.14", features = ["json"]}
port-selector = "0.1.6"
sea-orm = {version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-json"]}
dotenv = "0.15.0"
uuid = { version = "1.3.3", features = ["v4"]}
crypto = "0.5.0"
sha256 = "1.1.3"
toml = "0.8.1"
